# l-lang

./: Cargo.toml  README.md
examples/fib/: fib.l  fib.s
examples/person-struct/: person-struct.l  person-struct.s
examples/quicksort/: quicksort.l  quicksort.s
examples/vec/: vec.l  vec.s
l-lang/codegen/: Cargo.toml
l-lang/codegen/src/: allocator.rs  lib.rs  mips.rs
l-lang/compiler-entry/: Cargo.toml
l-lang/compiler-entry/src/: cli.rs  compiler.rs  main.rs
l-lang/ir/: Cargo.toml
l-lang/ir/src/: generator.rs  instruction.rs  ir_generator.rs  lib.rs  program.rs
l-lang/lexer/: Cargo.toml
l-lang/lexer/src/: lexer.rs  token.rs
l-lang/parser/: Cargo.toml
l-lang/parser/src/: expression.rs  lib.rs  parser.rs  program.rs  statement.rs  types.rs
l-lang/semantic/: Cargo.toml
l-lang/semantic/src/: analyzer.rs  lib.rs  program.rs  scope.rs  statement.rs  structs.rs  symbol.rs  warning.rs
l-lang/std/: io.l  mem.l  rand.l  string.l
l-lang/util/src/: error.rs
testing/: testing.l  testing.s
