[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llc"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
clap = { version = "4.6.0", features = ["derive"] }
util = { path = "../util" }
lexer = { path = "../lexer" }
semantic = { path = "../semantic" }
ir = { path = "../ir" }
codegen = { path = "../codegen" }
